Leverage StandardCharsets.UTF_8.
Signed-off-by: Radoslav Husar <radosoft@gmail.com>